[gd_scene load_steps=18 format=3 uid="uid://1mmx1mnvcgjn"]

[ext_resource type="Script" uid="uid://df7vk2vqagst1" path="res://Scripts/UI/main_menu.gd" id="1_g18y6"]
[ext_resource type="Theme" uid="uid://crmwd4ulbqdbp" path="res://HUD.tres" id="2_72sra"]
[ext_resource type="Material" uid="uid://cf3p61u0s073m" path="res://Art/MainMenu/MainMenuBackground.tres" id="2_k8um8"]
[ext_resource type="AudioStream" uid="uid://2blembipys8p" path="res://Audio/Music/kali - Yuraha - SoundLoadMate.com.mp3" id="2_mjmdf"]
[ext_resource type="FontFile" uid="uid://dr2c2ljpojrlf" path="res://Art/MainMenu/OperationNapalm-Regular.otf" id="3_jex3y"]
[ext_resource type="AudioStream" uid="uid://cfablmg0cs227" path="res://Audio/SFX/diesel-power-generator-33638.mp3" id="4_t6w0q"]
[ext_resource type="StyleBox" uid="uid://6j5enffhjbeo" path="res://Art/MainMenu/MainMenuButtonStyle_Normal.tres" id="4_ynupv"]
[ext_resource type="StyleBox" uid="uid://71elciwrq1ur" path="res://Art/MainMenu/MainMenuButtonStyle_Pressed.tres" id="5_m48tj"]
[ext_resource type="StyleBox" uid="uid://djd0xssjrlkqs" path="res://Art/MainMenu/MainMenuButtonStyle_Hovered.tres" id="6_dvisc"]
[ext_resource type="Texture2D" uid="uid://drht5fpacld6s" path="res://Icons/Additional/Sound_On_Icon.png" id="8_dvisc"]
[ext_resource type="Texture2D" uid="uid://cgbmwch1c05xw" path="res://Icons/Funny/goobers.png" id="9_ab04i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_370kx"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hys1s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fgqbg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_euk5f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kdsd0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w0mr3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g18y6")

[node name="BG" type="Panel" parent="."]
material = ExtResource("2_k8um8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_370kx")

[node name="VBoxContainer" type="VBoxContainer" parent="BG"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -280.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="BG/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9125873, 0.7115519, 3.85046e-07, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_jex3y")
theme_override_font_sizes/font_size = 256
text = "POWERLESS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="BG/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="BG/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartButton" type="Button" parent="BG/VBoxContainer/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("4_ynupv")
theme_override_styles/pressed = ExtResource("5_m48tj")
theme_override_styles/hover = ExtResource("6_dvisc")
text = "Start Game"

[node name="HSeparator" type="HSeparator" parent="BG/VBoxContainer/MenuButtons"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_constants/separation = 4

[node name="ExitButton" type="Button" parent="BG/VBoxContainer/MenuButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("4_ynupv")
theme_override_styles/pressed = ExtResource("5_m48tj")
theme_override_styles/hover = ExtResource("6_dvisc")
text = "Exit
"

[node name="SoundSettings" type="VBoxContainer" parent="BG"]
layout_mode = 0
offset_left = 2643.0
offset_top = 1945.0
offset_right = 3397.0
offset_bottom = 2077.0

[node name="Music" type="HBoxContainer" parent="BG/SoundSettings"]
layout_mode = 2
theme = ExtResource("2_72sra")
alignment = 2

[node name="MusicLabel" type="Label" parent="BG/SoundSettings/Music"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="BG/SoundSettings/Music"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_72sra")
theme_override_styles/grabber_area = ExtResource("4_ynupv")
theme_override_styles/grabber_area_highlight = ExtResource("6_dvisc")
min_value = -80.0
max_value = 20.0

[node name="SFX" type="HBoxContainer" parent="BG/SoundSettings"]
layout_mode = 2
theme = ExtResource("2_72sra")
alignment = 2

[node name="SFXLabel" type="Label" parent="BG/SoundSettings/SFX"]
layout_mode = 2
text = "SFX"
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="BG/SoundSettings/SFX"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_72sra")
theme_override_styles/grabber_area = ExtResource("4_ynupv")
theme_override_styles/grabber_area_highlight = ExtResource("6_dvisc")
min_value = -80.0
max_value = 20.0

[node name="MuteButton" type="Button" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 3454.0002
offset_top = 1912.0002
offset_right = 5502.0
offset_bottom = 3960.0002
scale = Vector2(0.1, 0.1)
tooltip_text = "Mute Button"
theme = ExtResource("2_72sra")
theme_override_styles/normal = SubResource("StyleBoxEmpty_hys1s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fgqbg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_euk5f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_kdsd0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_w0mr3")
toggle_mode = true
icon = ExtResource("8_dvisc")

[node name="FeelFreeText" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_left = 3352.0
offset_top = 1661.0
offset_right = 3752.0
offset_bottom = 1911.0
theme = ExtResource("2_72sra")
theme_override_font_sizes/normal_font_size = 36
text = "Feel free to fully mute the audio if you are getting overwhelmed with sounds. We understand <3"
fit_content = true
horizontal_alignment = 1

[node name="Arrow" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 3591.0
offset_top = 1907.0
offset_right = 3641.0
offset_bottom = 1957.0
rotation = 1.5707964
theme = ExtResource("2_72sra")
theme_override_font_sizes/normal_font_size = 36
text = "->"
fit_content = true
horizontal_alignment = 1

[node name="Cat" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 3688.0
offset_top = 1859.0
offset_right = 3908.0
offset_bottom = 2061.0
scale = Vector2(0.52, 0.52)
texture = ExtResource("9_ab04i")

[node name="BGMenuMusic" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1926, 960)
stream = ExtResource("2_mjmdf")
autoplay = true
max_distance = 5000.0
bus = &"Music"

[node name="SampleAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1926, 957)
stream = ExtResource("4_t6w0q")
volume_db = -5.0
max_distance = 5000.0
bus = &"SFX"

[connection signal="pressed" from="BG/VBoxContainer/MenuButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BG/VBoxContainer/MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="BG/SoundSettings/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="drag_ended" from="BG/SoundSettings/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="drag_started" from="BG/SoundSettings/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_started"]
[connection signal="value_changed" from="BG/SoundSettings/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="toggled" from="MuteButton" to="." method="_on_mute_button_toggled"]
